show hide/show contact/enquire, update yacht

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<!--<button (click)="test()">test</button> -->
+<app-header></app-header>
 
- <app-header></app-header>
- <main class="page-offset">
-<router-outlet></router-outlet>
+<main class="page-offset">
+  <router-outlet></router-outlet>
 </main>
-<app-enquire></app-enquire>
-<app-contact></app-contact>
+
+<app-enquire *ngIf="showEnquire"></app-enquire>
+
+<app-contact *ngIf="showContact"></app-contact>
+
 <app-whatsapp></app-whatsapp>
+
 <app-footer></app-footer>
