update number, name

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -4,7 +4,7 @@
       <div class="footer__grid">
         <!-- Brand / About -->
         <div class="footer__card footer__brand" aria-label="Brand">
-          <p class="footer__brandName">Om Sai Aqua Safari</p>
+          <p class="footer__brandName">Sea Rider Goa - Yacht Service</p>
           <p class="footer__brandTagline">
             Premium yacht rentals and curated cruise experiences in Goa.
           </p>
@@ -56,7 +56,7 @@
       <!-- Bottom Bar -->
       <div class="footer__bottom" aria-label="Copyright">
         <p class="footer__copyright">
-          © {{ currentYear }} Om Sai Aqua Safari. All rights reserved.
+          © {{ currentYear }} Sea Rider Goa - Yacht Service. All rights reserved.
         </p>
 
         <p class="footer__meta">
