--- a/src/app/yachtOptions/yachtOptions.component.html
+++ b/src/app/yachtOptions/yachtOptions.component.html
@@ -76,7 +76,7 @@
         />
       </svg>
     </span>
-    <span class="overlay-text">{{ y.rate }}</span>
+    <span class="overlay-text">{{ y.startingFrom }}</span>
   </div>
 </div>
       </div>
