--- a/src/app/common/contact/contact.component.html
+++ b/src/app/common/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section id="contactus" class="contact" aria-labelledby="contactTitle">
+<section id="contactus" class="contact" aria-labelledby="contactTitle" [class.contact--route]="isContactRoute">
   <div class="contact__wrap">
     <!-- Header: same style as Enquire/Testimonial header -->
     <header class="gallery__header contact__header">
