--- a/src/app/common/enquire/enquire.component.html
+++ b/src/app/common/enquire/enquire.component.html
@@ -1,4 +1,4 @@
-<section id="enquire" class="enquire" aria-labelledby="enquireTitle">
+<section id="enquire" class="enquire" aria-labelledby="enquireTitle" [class.enquire--route]="isEnquireRoute">
   <!-- Success/Error Toast -->
   <div
     class="toast"
