--- a/src/app/explore/explore.component.html
+++ b/src/app/explore/explore.component.html
@@ -1,7 +1,7 @@
 <section
   #exploreSection
   class="explore"
- 
+  [class.explore--route]="isExploreRoute"
   aria-labelledby="explore-title"
 >
 <div class="explore__header">
