--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,5 +1,5 @@
-<section id="gallery" class="gallery">
-  <div class="container">
+<section id="gallery" [class.gallery--route]="isGalleryRoute">
+  <div >
     <header class="gallery__header">
       <h2 class="gallery__title">Gallery</h2>
       <h3 class="gallery__tagline">Moments from our Yacht Experiences</h3>
