--- a/src/app/yachtOptions/yachtOptions.component.html
+++ b/src/app/yachtOptions/yachtOptions.component.html
@@ -1,4 +1,4 @@
-<section class="yacht-page" aria-labelledby="yachtTitle">
+<section class="yacht-page"  [class.yacht-options--route]="isYachtOptions"  aria-labelledby="yachtTitle">
   <header class="explore__header">
   <h1 id="yachtTitle" class="explore__title">Experience Our Most Loved Luxury Yachts</h1>
 </header>
