--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -1,4 +1,4 @@
-<section #testimonialSection class="testimonials-section">
+<section #testimonialSection class="testimonials-section" [class.testimonials--route]="isTestimonialRoute">
   <div class="container">
     <header class="gallery__header testimonials__header">
   <h2 class="gallery__title">Hear from our Customers</h2>
