--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+@defer (on viewport) {
 <section id="home" class="home-hero">
   <div class="hero-frame">
     <div
@@ -95,7 +96,26 @@
     </div>
   </div>
 </section>
+}@placeholder {
+<div></div>
+}
+@defer (on viewport) {
 <app-explore></app-explore>
+} @placeholder {
+<div></div>
+}
+@defer (on viewport) {
 <app-yachtOptions></app-yachtOptions>
+} @placeholder {
+<div></div>
+}
+@defer (on viewport) {
 <app-gallery></app-gallery>
+} @placeholder {
+<div></div>
+}
+@defer (on viewport) {
 <app-testimonials></app-testimonials>
+} @placeholder {
+<div></div>
+}
